--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,25 +9,28 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header class="header" id="header">
         <div class="container" id="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
-                    </div>
-                    <div class="logo" id="logo">
-                        <a href="index.html" class="home" id="home">
-                            <span class="return" id="return">
-                                <i class="fa-solid fa-arrow-left"></i>
-                            </span>
-                        </a>
-                        <img src="assets/img/logo/ohmyfood.png" class="img-logo" alt="Logo du site OHMYFOOD">
-                    </div>
+                </div>
+                <div class="logo" id="logo">
+                    <a href="index.html" class="home" id="home">
+                        <span class="return" id="return">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </span>
+                    </a>
+                    <img src="assets/img/logo/ohmyfood.png" class="img-logo" alt="Logo du site OHMYFOOD">
                 </div>
             </div>
+        </div>
         </div>
     </header>
     <main class="main">
@@ -114,7 +118,7 @@
                                     <h6 class="ent-title">Pigeonneau d'Ille-et-Vilaine</h6>
                                 </div>
                                 <div class="txt">
-                                    <p>Sur son  lit de gnocchis aux légumes</p>
+                                    <p>Sur son lit de gnocchis aux légumes</p>
                                 </div>
                                 <div class="valid-btn">
                                     <span class="price">44€</span>
@@ -191,7 +195,8 @@
             </div>
         </div>
     </footer>
-    
+
     <script src="https://kit.fontawesome.com/03e24a9fa2.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
