--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -1,4 +1,6 @@
+<!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +9,34 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header class="header" id="header">
         <div class="container" id="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
-                    </div>
-                    <div class="logo" id="logo">
-                        <a href="index.html" class="home" id="home">
-                            <span class="return" id="return">
-                                <i class="fa-solid fa-arrow-left"></i>
-                            </span>
-                        </a>
-                        <img src="assets/img/logo/ohmyfood.png" class="img-logo" alt="Logo du site OHMYFOOD">
-                    </div>
+                </div>
+                <div class="logo" id="logo">
+                    <a href="index.html" class="home" id="home">
+                        <span class="return" id="return">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </span>
+                    </a>
+                    <img src="assets/img/logo/ohmyfood.png" class="img-logo" alt="Logo du site OHMYFOOD">
                 </div>
             </div>
+        </div>
         </div>
     </header>
 
     <main class="main">
         <section class="present delice">
+            <div class="present-div"></div>
         </section>
         <section class="menu-restau">
             <div class="col-lg-12 col-md-12 col-sm-12">
@@ -48,40 +54,40 @@
                     <h2 class="m-title">Entrées</h2>
                     <div class="card-rest">
                         <button class="shad btn-menu">
-                            <div class="tit-c">
+                            <span class="tit-c">
                                 <h6 class="ent-title">Tartare de thon</h6>
-                            </div>
-                            <div class="txt">
+                            </span>
+                            <span class="txt">
                                 <p>Assaisonné au yuzu</p>
-                            </div>
-                            <div class="valid-btn">
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">25€</span>
-                            </div>
+                            </span>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
+                            <span class="tit-c">
                                 <h6 class="ent-title">Bouchée de homard croustillant</h6>
-                            </div>
-                            <div class="txt">
+                            </span>
+                            <span class="txt">
                                 <p>Et sa farandole de petits légumes</p>
-                            </div>
+                            </span>
                             <div class="valid-btn">
                                 <span class="price">35€</span>
                             </div>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
+                            <span class="tit-c">
                                 <h6 class="ent-title">Velouté de cèpes</h6>
-                            </div>
-                            <div class="txt">
+                            </span>
+                            <span class="txt">
                                 <p>Aux truffes</p>
-                            </div>
-                            <div class="valid-btn">
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">20€</span>
                                 <span class="valid">
                                     <i class="fa-solid fa-circle-check"></i>
                                 </span>
-                            </div>
+                            </span>
                         </button>
                     </div>
                 </div>
@@ -89,37 +95,37 @@
                     <h3 class="m-title">Plats</h3>
                     <div class="card-rest">
                         <button class="shad btn-menu">
-                            <div class="tit-c">
+                            <span class="tit-c">
                                 <h6 class="ent-title">Poulet rôti aux herbes de Prove...</h6>
-                            </div>
-                            <div class="txt">
+                            </span>
+                            <span class="txt">
                                 <p>Et sa crème de truffe</p>
-                            </div>
-                            <div class="valid-btn">
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">40€</span>
-                            </div>
+                            </span>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
+                            <span class="tit-c">
                                 <h6 class="ent-title">Langouste rôtie</h6>
-                            </div>
-                            <div class="txt">
+                            </span>
+                            <span class="txt">
                                 <p>Et ses légumes de saison</p>
-                            </div>
-                            <div class="valid-btn">
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">35€</span>
-                            </div>
+                            </span>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
+                            <span class="tit-c">
                                 <h6 class="ent-title">Côte de boeuf Angus</h6>
-                            </div>
-                            <div class="txt">
+                            </span>
+                            <span class="txt">
                                 <p>Et sa purée de panais</p>
-                            </div>
-                            <div class="valid-btn">
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">44€</span>
-                            </div>
+                            </span>
                         </button>
                     </div>
                 </div>
@@ -127,37 +133,37 @@
                     <h4 class="m-title">Désserts</h4>
                     <div class="card-rest">
                         <button class="shad btn-menu">
-                            <div class="tit-c">
+                            <span class="tit-c">
                                 <h6 class="ent-title">Farandole de desserts</h6>
-                            </div>
-                            <div class="txt">
+                            </span>
+                            <span class="txt">
                                 <p>Du chef</p>
-                            </div>
-                            <div class="valid-btn">
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">18€</span>
-                            </div>
+                            </span>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
+                            <span class="tit-c">
                                 <h6 class="ent-title">Crème brûlée</h6>
-                            </div>
-                            <div class="txt">
+                            </span>
+                            <span class="txt">
                                 <p>Revisitée</p>
-                            </div>
-                            <div class="valid-btn">
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">22€</span>
-                            </div>
+                            </span>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
+                            <span class="tit-c">
                                 <h6 class="ent-title">Tiramisu</h6>
-                            </div>
-                            <div class="txt">
+                            </span>
+                            <span class="txt">
                                 <p>À la noisette</p>
-                            </div>
-                            <div class="valid-btn">
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">23€</span>
-                            </div>
+                            </span>
                         </button>
                     </div>
                 </div>
@@ -191,7 +197,12 @@
             </div>
         </div>
     </footer>
-    
+
+    <div class="loader" id="loader">
+        
+    </div>
+
     <script src="https://kit.fontawesome.com/03e24a9fa2.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
