--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,12 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header class="header" id="header">
         <div class="container" id="container">
@@ -28,7 +32,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-                        <p class="txt" id="txt">
+                        <p class="txt">
                             <i class="fa-solid fa-location-dot"></i> Paris, Belleville
                         </p>
                     </div>
@@ -43,7 +47,7 @@
                     </div>
                     <div class="col-md-12">
                         <p>
-                            Découvrez des restaurants d'exception sélectionnés par nos soins. 
+                            Découvrez des restaurants d'exception sélectionnés par nos soins.
                         </p>
                     </div>
                     <div class="col-md-12">
@@ -67,13 +71,13 @@
                             <div class="number">
                                 <span class="numb">1</span>
                             </div>
-                            <button class="restaurant" id="restaurant">
-                                <div class="icon" id="icon">
+                            <button class="restaurant">
+                                <div class="icon">
                                     <span class="phone" id="phone">
                                         <i class="fa-solid fa-mobile-screen"></i>
                                     </span>
                                 </div>
-                                <div class="text" id="text">
+                                <div class="text">
                                     <span class="p-t">Choisissez un restaurant</span>
                                 </div>
                             </button>
@@ -84,13 +88,13 @@
                             <div class="number">
                                 <span class="numb">2</span>
                             </div>
-                            <button class="menu" id="menu">
-                                <div class="icon" id="icon">
+                            <button class="menu">
+                                <div class="icon">
                                     <span class="list" id="list">
                                         <i class="fa-solid fa-list"></i>
                                     </span>
                                 </div>
-                                <div class="text" id="text">
+                                <div class="text">
                                     <span class="p-t">Composez votre menu</span>
                                 </div>
                             </button>
@@ -102,12 +106,12 @@
                                 <span class="numb">3</span>
                             </div>
                             <button class="degust" id="degust">
-                                <div class="icon" id="icon">
+                                <div class="icon">
                                     <span class="store" id="store">
                                         <i class="fa-solid fa-store"></i>
                                     </span>
                                 </div>
-                                <div class="text" id="text">
+                                <div class="text">
                                     <span class="p-t">Dégustez au restaurant</span>
                                 </div>
                             </button>
@@ -125,18 +129,19 @@
                     <div class="cards-list" id="cards-list">
                         <div class="one">
                             <a href="palette-du-gout.html">
-                                <div class="card shad" id="card">
-                                    <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image restaurant 1">
-                                    <div class="new" id="new">
+                                <div class="card shad">
+                                    <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                        alt="Image restaurant 1">
+                                    <div class="new">
                                         <p>Nouveau</p>
                                     </div>
-                                    <div class="card-body" id="cardbody">
-                                        <div class="txt" id="txt">
+                                    <div class="card-body">
+                                        <div class="txt">
                                             <h5>La palette du goût</h5>
                                             <p>Ménilmontant</p>
                                         </div>
-                                        <div class="favoris favoris-ind" id="favoris">
-                                            <span class="ic" id="ic">
+                                        <div class="favoris favoris-ind">
+                                            <span class="ic">
                                                 <i class="fa-regular fa-heart"></i>
                                             </span>
                                         </div>
@@ -145,40 +150,42 @@
                             </a>
                         </div>
                         <div class="two">
-                           <a href="note-enchantee.html">
-                            <div class="card shad" id="card">
-                                <img src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image restaurant 2">
-                                <div class="new" id="new">
-                                    <p>Nouveau</p>
-                                </div>
-                                <div class="card-body" id="cardbody">
-                                    <div class="txt" id="txt">
-                                        <h5>La note enchantée</h5>
-                                        <p>Charonne</p>
+                            <a href="note-enchantee.html">
+                                <div class="card shad">
+                                    <img src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                        alt="Image restaurant 2">
+                                    <div class="new">
+                                        <p>Nouveau</p>
                                     </div>
-                                    <div class="favoris favoris-ind" id="favoris">
-                                        <span class="ic" id="ic">
-                                            <i class="fa-regular fa-heart"></i>
-                                        </span>
+                                    <div class="card-body">
+                                        <div class="txt">
+                                            <h5>La note enchantée</h5>
+                                            <p>Charonne</p>
+                                        </div>
+                                        <div class="favoris favoris-ind">
+                                            <span class="ic">
+                                                <i class="fa-regular fa-heart"></i>
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                           </a>
+                            </a>
                         </div>
                         <div class="three">
                             <a href="a-la-francaise.html">
-                                <div class="card shad" id="card">
-                                    <img src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image restaurant 3">
-                                    <div class="new" id="new">
+                                <div class="card shad">
+                                    <img src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                        alt="Image restaurant 3">
+                                    <div class="new">
                                         <p>Nouveau</p>
                                     </div>
-                                    <div class="card-body" id="cardbody">
-                                        <div class="txt" id="txt">
+                                    <div class="card-body">
+                                        <div class="txt">
                                             <h5>À la française</h5>
                                             <p>Cité rouge</p>
                                         </div>
-                                        <div class="favoris favoris-ind" id="favoris">
-                                            <span class="ic" id="ic">
+                                        <div class="favoris favoris-ind">
+                                            <span class="ic">
                                                 <i class="fa-regular fa-heart"></i>
                                             </span>
                                         </div>
@@ -188,18 +195,19 @@
                         </div>
                         <div class="four">
                             <a href="delice-des-sens.html">
-                                <div class="card shad" id="card">
-                                    <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image restaurant 4">
-                                    <div class="new" id="new">
+                                <div class="card shad">
+                                    <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                        alt="Image restaurant 4">
+                                    <div class="new">
                                         <p>Nouveau</p>
                                     </div>
-                                    <div class="card-body" id="cardbody">
-                                        <div class="txt" id="txt">
+                                    <div class="card-body">
+                                        <div class="txt">
                                             <h5>Le délice des sens</h5>
                                             <p>Folie-Méricourt</p>
                                         </div>
-                                        <div class="favoris favoris-ind" id="favoris">
-                                            <span class="ic" id="ic">
+                                        <div class="favoris favoris-ind">
+                                            <span class="ic">
                                                 <i class="fa-regular fa-heart"></i>
                                             </span>
                                         </div>
@@ -230,7 +238,15 @@
             </div>
         </div>
     </footer>
-    
+
+    <div class="loader">
+        <div class="dot dot-1"></div>
+        <div class="dot dot-2"></div>
+        <div class="dot dot-3"></div>
+        <div class="dot dot-4"></div>
+    </div>
+
     <script src="https://kit.fontawesome.com/03e24a9fa2.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
